<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017. David Zahid Jiménez Grez. All rights reserved.
  ~
  ~ Creative Commons License.
  ~
  ~ CRM App is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your discretion) any later version.
  ~ CRM App  is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with CRM App. If not, see https://www.gnu.org/licenses/.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noteTitleIn"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/TitleEditText"
                android:hint="@string/titleHintIn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noteContentIn"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ContentEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="4" >
            </EditText>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/addNoteToDB"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveNoteButtonIn" />

</LinearLayout>